; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge.c_msg_entry_is_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge.c_msg_entry_is_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_msg_entry = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32*, i32* }

@GIT_REFS_HEADS_DIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.merge_msg_entry*, i32*)* @msg_entry_is_branch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @msg_entry_is_branch(%struct.merge_msg_entry* %0, i32* %1) #0 {
  %3 = alloca %struct.merge_msg_entry*, align 8
  %4 = alloca i32*, align 8
  store %struct.merge_msg_entry* %0, %struct.merge_msg_entry** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @GIT_UNUSED(i32* %5)
  %7 = load %struct.merge_msg_entry*, %struct.merge_msg_entry** %3, align 8
  %8 = getelementptr inbounds %struct.merge_msg_entry, %struct.merge_msg_entry* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %36

11:                                               ; preds = %2
  %12 = load %struct.merge_msg_entry*, %struct.merge_msg_entry** %3, align 8
  %13 = getelementptr inbounds %struct.merge_msg_entry, %struct.merge_msg_entry* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %36

18:                                               ; preds = %11
  %19 = load %struct.merge_msg_entry*, %struct.merge_msg_entry** %3, align 8
  %20 = getelementptr inbounds %struct.merge_msg_entry, %struct.merge_msg_entry* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %36

25:                                               ; preds = %18
  %26 = load i32, i32* @GIT_REFS_HEADS_DIR, align 4
  %27 = load %struct.merge_msg_entry*, %struct.merge_msg_entry** %3, align 8
  %28 = getelementptr inbounds %struct.merge_msg_entry, %struct.merge_msg_entry* %27, i32 0, i32 1
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32*, i32** %30, align 8
  %32 = load i32, i32* @GIT_REFS_HEADS_DIR, align 4
  %33 = call i32 @strlen(i32 %32)
  %34 = call i64 @git__strncmp(i32 %26, i32* %31, i32 %33)
  %35 = icmp eq i64 %34, 0
  br label %36

36:                                               ; preds = %25, %18, %11, %2
  %37 = phi i1 [ false, %18 ], [ false, %11 ], [ false, %2 ], [ %35, %25 ]
  %38 = zext i1 %37 to i32
  ret i32 %38
}

declare dso_local i32 @GIT_UNUSED(i32*) #1

declare dso_local i64 @git__strncmp(i32, i32*, i32) #1

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
